# tree-sitter-nim

./: .gitignore  Cargo.toml
bindings/rust/: lib.rs
