# SPDX-FileCopyrightText: 2022 None
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "tree-sitter-nim"
description = "nim grammar for the tree-sitter parsing library"
version = "0.7.0"
keywords = ["incremental", "parsing", "nim"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-nim"
edition = "2024"
rust-version = "1.97"
license = "MPL-2.0"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter = "0.26"
